--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         <div class="card">
             <h2>Projects</h2>
             <ul>
-                <li><strong>Real-Time Network Visualization:</strong> <span class="btn" onclick="showDetails('project1')">Learn More</span></li>
+                <li><strong>Intrusion Detection System</strong> <span class="btn" onclick="showDetails('project1')">Learn More</span><a href = "https://github.com/varaprasad1016/IntrusionDetectionSystem" class="btn" target="_blank">Source Code</li>
                 <li><strong>Sales Prediction Model:</strong> <span class="btn" onclick="showDetails('project2')">Learn More</span></li>
                 <li><strong>Customer Churn Analysis:</strong> <span class="btn" onclick="showDetails('project3')">Learn More</span></li>
             </ul>
