--- a/index.html
+++ b/index.html
@@ -184,6 +184,10 @@
                     <strong>Gamma Particle Classification:</strong> <span class="btn" onclick="showDetails('project2')">Learn More</span> 
                     <a href="https://github.com/varaprasad1016/Classification-Of-Gamma-Particles-using-Classification-Techniques" class="btn" target="_blank">Source Code</a>
                 </li>
+                 <li>
+                    <strong>Neat Log Updater:</strong> <span class="btn" onclick="showDetails('project2')">Learn More</span> 
+                    <a href="https://github.com/varaprasad1016/neatlogupdater" class="btn" target="_blank">Source Code</a>
+                </li>
             </ul>
         </div>
     </div>
