--- a/index.html
+++ b/index.html
@@ -211,6 +211,7 @@
             const details = {
                 project1: "IntrusionDetectionSystem: Built a Python and Flask application with Machine Learning for Intrusion Detection over Networks.",
                 project2: "Gamma Particle Classification: Developed a machine learning model for classifying gamma particles using supervised learning.",
+                project3: "Commercial Project."
             };
             alert(details[projectId]);
         }
