--- a/index.html
+++ b/index.html
@@ -5,110 +5,173 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Portfolio of Varaprasad Sukala, Data Scientist">
     <title>Varaprasad Sukala | Data Scientist</title>
+	
+
     <style>
-        /* General Styles */
+        /* Piratey Vintage Aesthetic */
+        @import url('https://fonts.googleapis.com/css2?family=Pirata+One&display=swap');
+
         body {
-            font-family: 'Arial', sans-serif;
+            font-family: 'Roboto', cursive;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
-            color: #333;
+            background: #f4e3d7; /* Parchment background */
+            color: #4d3319; /* Dark brown text */
         }
         header {
-            background: #007bff;
-            color: white;
-            padding: 2rem 1rem;
+            background: #331a00;
+            color: #f7d794;
             text-align: center;
+            padding: 3rem 1rem;
+            border-bottom: 5px solid #8c5a24;
         }
         header h1 {
-            margin: 0;
-            font-size: 2.5rem;
+            font-size: 3rem;
+            text-shadow: 0 2px 4px #000;
         }
         header img {
             margin-top: 1rem;
             width: 150px;
             height: 150px;
             border-radius: 50%;
-            border: 3px solid white;
+            border: 3px solid #8c5a24;
             object-fit: cover;
+            box-shadow: 0 4px 8px #000;
         }
         header nav {
             margin-top: 1rem;
         }
         header nav a {
-            color: white;
+            color: #f7d794;
             text-decoration: none;
             margin: 0 1rem;
-            font-size: 1rem;
+            font-size: 1.2rem;
             font-weight: bold;
+            transition: all 0.3s;
         }
         header nav a:hover {
-            text-decoration: underline;
+            text-shadow: 0 0 10px #ffdd00;
         }
         .container {
-            padding: 2rem;
+            padding: 3rem 2rem;
             max-width: 900px;
             margin: auto;
+            background: #f7e3c1; /* Old parchment look */
+            border: 2px solid #8c5a24;
+            box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+            border-radius: 10px;
         }
         .card {
-            background: white;
-            margin: 1.5rem 0;
-            padding: 1.5rem;
-            border-radius: 8px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            background: #fff5e3;
+            margin: 2rem 0;
+            padding: 2rem;
+            border-radius: 10px;
+            border: 2px solid #8c5a24;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
         }
         .card h2 {
             margin-top: 0;
+            font-size: 2rem;
+            color: #331a00;
+            text-shadow: 1px 1px #8c5a24;
         }
         .edu-section img, .work-section img {
-            width: 50px;
-            height: 50px;
+            width: 60px;
+            height: 60px;
             object-fit: cover;
-            margin-right: 10px;
+            margin-right: 15px;
             border-radius: 5px;
-            border: 1px solid #ddd;
+            border: 2px solid #8c5a24;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
         }
         .edu-section .edu-item, .work-section .work-item {
             display: flex;
             align-items: center;
-            margin-bottom: 1rem;
+            margin-bottom: 1.5rem;
         }
         .edu-section .edu-item div, .work-section .work-item div {
-            margin-left: 10px;
+            margin-left: 15px;
         }
         .btn {
             display: inline-block;
             padding: 0.8rem 1.5rem;
-            background: #007bff;
-            color: white;
+            background: linear-gradient(90deg, #8c5a24, #ffdd00);
+            color: #331a00;
             text-decoration: none;
             border-radius: 5px;
             font-weight: bold;
-            margin-top: 1rem;
+            text-transform: uppercase;
+            position: relative;
             cursor: pointer;
+            transition: all 0.3s ease;
         }
         .btn:hover {
-            background: #0056b3;
+            background: linear-gradient(90deg, #ffdd00, #8c5a24);
+            transform: scale(1.05);
         }
         footer {
             text-align: center;
-            margin-top: 2rem;
-            padding: 1rem 0;
-            background: #333;
-            color: white;
+            margin-top: 3rem;
+            padding: 2rem 0;
+            background: #331a00;
+            color: #f7d794;
         }
         footer a {
-            color: #007bff;
+            color: #ffdd00;
             text-decoration: none;
         }
         footer a:hover {
-            text-decoration: underline;
+            text-shadow: 0 0 10px #ffdd00;
         }
-    </style>
+        .terminal-container {
+            width: 100%;
+            background: #222;
+            color: #fff;
+            padding: 1rem;
+            border-radius: 10px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+            margin-top: 2rem;
+        }
+        .terminal_toolbar {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+        .terminal_promt {
+            display: flex;
+            align-items: center;
+            margin-top: 1rem;
+        }
+        .terminal_cursor {
+            color: #fff;
+            border: none;
+            background: none;
+            outline: none;
+            width: 100%;
+        }
+        .resume-btn {
+            display: none;
+            margin-top: 1rem;
+            padding: 1rem;
+            background-color: #ffdd00;
+            color: #331a00;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            font-weight: bold;
+            text-transform: uppercase;
+            text-align: center;
+        }
+        .resume-btn.show {
+            display: block;
+        }
+</style>
+
 </head>
 <body>
     <header>
         <h1>Varaprasad Sukala</h1>
+		<h2> Data Scientist </h2>
         <img src="WhatsApp Image 2024-12-15 at 09.27.43_afea45e8.jpg" alt="Profile Picture">
         <nav>
             <a href="#about">About</a>
@@ -118,7 +181,6 @@
         </nav>
     </header>
     <div class="container" id="about">
-        <!-- About Me Section -->
         <div class="card">
             <h2>About Me</h2>
             <p>Hello! I'm Varaprasad Sukala, a passionate Data Scientist with expertise in AI, machine learning, and data analytics. I enjoy solving complex problems and turning data into actionable insights.</p>
@@ -185,18 +247,191 @@
                     <a href="https://github.com/varaprasad1016/Classification-Of-Gamma-Particles-using-Classification-Techniques" class="btn" target="_blank">Source Code</a>
                 </li>
                  <li>
-                    <strong>Neat Log Updater:</strong> <span class="btn" onclick="showDetails('project2')">Learn More</span> 
+                    <strong>Neat Log Updater:</strong> <span class="btn" onclick="showDetails('project3')">Learn More</span> 
                     <a href="https://github.com/varaprasad1016/neatlogupdater" class="btn" target="_blank">Source Code</a>
                 </li>
             </ul>
         </div>
     </div>
-    <footer>
-        <p>© 2024 Varaprasad Sukala. Connect with me on <a href="https://www.linkedin.com/in/varaprasadsukalathedatascientist" target="_blank">LinkedIn</a>.</p>
-    </footer>
+					</div>
+					<!-- Add a unique ID to the terminal container -->
+			<div class="container">
+        <div class="card">
+            <h2>Resume Terminal</h2>
+            <p>Answer this in the terminal below and I'll show you my resume!</p>
+            <div class="terminal-container">
+                <div class="terminal_toolbar">
+                    <div class="butt">
+                        <button class="btn btn-color"></button>
+                        <button class="btn"></button>
+                        <button class="btn"></button>
+                    </div>
+                    <p class="user">vara@admin: ~</p>
+                    <div class="add_tab">
+                        +
+                    </div>
+                </div>
+                <div class="terminal_body">
+                    <div class="terminal_promt">
+                        <span class="terminal_user">vara@admin:</span>
+                        <span class="terminal_location">~</span>
+                        <span class="terminal_bling">$</span>
+                        <input id="userInput" type="text" class="terminal_cursor" placeholder="Enter your name" oninput="checkInput()" />
+                    </div>
+                    <div id="response"></div>
+                    <button id="resumeButton" class="resume-btn" onclick="openResume()">View Resume</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
-    <!-- JavaScript -->
-    <script>
+
+<style>
+    /* Add terminal-specific styles under the new class to avoid conflicts */
+.terminal-container {
+    width: 250px;
+    height: 250px;
+    margin: 20px auto; /* Keep it separate from the main layout */
+}
+
+.terminal-container .terminal_toolbar {
+    display: flex;
+    height: 30px;
+    align-items: center;
+    padding: 0 8px;
+    box-sizing: border-box;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    background: #212121;
+    justify-content: space-between;
+}
+
+.terminal-container .butt {
+    display: flex;
+    align-items: center;
+}
+
+.terminal-container .btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0;
+    margin-right: 5px;
+    font-size: 8px;
+    height: 12px;
+    width: 12px;
+    box-sizing: border-box;
+    border: none;
+    border-radius: 100%;
+    background: linear-gradient(#7d7871 0%, #595953 100%);
+    text-shadow: 0px 1px 0px rgba(255, 255, 255, 0.2);
+    box-shadow: 0px 0px 1px 0px #41403A, 0px 1px 1px 0px #474642;
+}
+
+.terminal-container .btn-color {
+    background: #ee411a;
+}
+
+.terminal-container .btn:hover {
+    cursor: pointer;
+}
+
+.terminal-container .btn:focus {
+    outline: none;
+}
+
+.terminal-container .add_tab {
+    border: 1px solid #fff;
+    color: #fff;
+    padding: 0 6px;
+    border-radius: 4px 4px 0 0;
+    border-bottom: none;
+    cursor: pointer;
+}
+
+.terminal-container .user {
+    color: #d5d0ce;
+    margin-left: 6px;
+    font-size: 14px;
+    line-height: 15px;
+}
+
+.terminal-container .terminal_body {
+    background: rgba(0, 0, 0, 0.6);
+    height: calc(100% - 30px);
+    padding-top: 2px;
+    margin-top: -1px;
+    font-size: 12px;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+}
+
+.terminal-container .terminal_promt {
+    display: flex;
+}
+
+.terminal-container .terminal_promt span {
+    margin-left: 4px;
+}
+
+.terminal-container .terminal_user {
+    color: #1eff8e;
+}
+
+.terminal-container .terminal_location {
+    color: #4878c0;
+}
+
+.terminal-container .terminal_bling {
+    color: #dddddd;
+}
+
+.terminal-container .terminal_cursor {
+    display: block;
+    height: 14px;
+    width: 5px;
+    margin-left: 10px;
+    animation: curbl 1200ms linear infinite;
+}
+
+@keyframes curbl {
+    0% {
+        background: #ffffff;
+    }
+    49% {
+        background: #ffffff;
+    }
+    60% {
+        background: transparent;
+    }
+    99% {
+        background: transparent;
+    }
+    100% {
+        background: #ffffff;
+    }
+}
+
+</style>
+
+    <footer>
+    <p>© 2024 Varaprasad Sukala</p>
+    <div style="margin-top: 1rem;">
+        <!-- Instagram -->
+        <a href="https://www.instagram.com/varaprasad.py/profilecard/?igsh=MWlwYmdpbmdja3Izeg==" target="_blank" style="margin: 0 10px; text-decoration: none; color: inherit;">
+            <img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png" alt="Instagram" style="width: 30px; vertical-align: middle;">
+        </a>
+        <!-- X (Twitter) -->
+        <a href="https://x.com/i/flow/login?redirect_after_login=%2FVaraprasad1016" target="_blank" style="margin: 0 10px; text-decoration: none; color: inherit;">
+            <img src="https://cdn-icons-png.flaticon.com/512/733/733579.png" alt="X (Twitter)" style="width: 30px; vertical-align: middle;">
+        </a>
+        <!-- GitHub -->
+        <a href="https://github.com/varaprasad1016" target="_blank" style="margin: 0 10px; text-decoration: none; color: inherit;">
+            <img src="https://cdn-icons-png.flaticon.com/512/733/733553.png" alt="GitHub" style="width: 30px; vertical-align: middle;">
+        </a>
+    </div>
+</footer>
+<script>
         // Smooth scrolling
         document.querySelectorAll('nav a').forEach(anchor => {
             anchor.addEventListener('click', function(e) {
@@ -214,6 +449,25 @@
                 project3: "Commercial Project."
             };
             alert(details[projectId]);
+        }
+        // Function to check the input in the terminal
+        function checkInput() {
+            const input = document.getElementById('userInput').value.toLowerCase();
+            const response = document.getElementById('response');
+            const resumeButton = document.getElementById('resumeButton');
+            
+            if(input.includes('varaprasad')) {
+                response.innerHTML = 'Welcome Varaprasad! You can now view your resume.';
+                resumeButton.classList.add('show');
+            } else {
+                response.innerHTML = '';
+                resumeButton.classList.remove('show');
+            }
+        }
+
+        // Function to open the resume
+        function openResume() {
+            window.open('resume.pdf', '_blank');
         }
     </script>
 </body>
