--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         @import url('https://fonts.googleapis.com/css2?family=Pirata+One&display=swap');
 
         body {
-            font-family: 'Roboto', cursive;
+            font-family: 'Roboto';
             margin: 0;
             padding: 0;
             background: #f4e3d7; /* Parchment background */
