--- a/index.html
+++ b/index.html
@@ -93,22 +93,25 @@
             margin-left: 15px;
         }
         .btn {
-            display: inline-block;
-            padding: 0.8rem 1.5rem;
-            background: linear-gradient(90deg, #8c5a24, #ffdd00);
-            color: #331a00;
-            text-decoration: none;
-            border-radius: 5px;
-            font-weight: bold;
-            text-transform: uppercase;
-            position: relative;
-            cursor: pointer;
-            transition: all 0.3s ease;
-        }
-        .btn:hover {
-            background: linear-gradient(90deg, #ffdd00, #8c5a24);
-            transform: scale(1.05);
-        }
+    display: inline-block;
+    padding: 0.8rem 1.5rem;
+    background: linear-gradient(90deg, #b8864b, #d2a679);
+    color: #2c1a08;
+    text-decoration: none;
+    border-radius: 8px;
+    border: 1px solid #8c5a24;
+    font-weight: bold;
+    text-transform: uppercase;
+    box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.2);
+    cursor: pointer;
+    transition: all 0.3s ease;
+    }
+
+.btn:hover {
+    background: linear-gradient(90deg, #d2a679, #b8864b);
+    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.3);
+    transform: translateY(-2px);
+}
         footer {
             text-align: center;
             margin-top: 3rem;
