--- a/index.html
+++ b/index.html
@@ -242,15 +242,15 @@
             <h2>Projects</h2>
             <ul>
                 <li>
-                    <strong>Intrusion Detection System:</strong> <span class="btn" onclick="showDetails('project1')">Learn More</span> 
+                    <strong>Intrusion Detection System:</strong> 
                     <a href="https://github.com/varaprasad1016/IntrusionDetectionSystem" class="btn" target="_blank">Source Code</a>
                 </li>
                 <li>
-                    <strong>Gamma Particle Classification:</strong> <span class="btn" onclick="showDetails('project2')">Learn More</span> 
+                    <strong>Gamma Particle Classification:</strong>
                     <a href="https://github.com/varaprasad1016/Classification-Of-Gamma-Particles-using-Classification-Techniques" class="btn" target="_blank">Source Code</a>
                 </li>
                  <li>
-                    <strong>Neat Log Updater:</strong> <span class="btn" onclick="showDetails('project3')">Learn More</span> 
+                    <strong>Neat Log Updater:</strong>
                     <a href="https://github.com/varaprasad1016/neatlogupdater" class="btn" target="_blank">Source Code</a>
                 </li>
             </ul>
