--- a/index.html
+++ b/index.html
@@ -237,25 +237,32 @@
         </div>
     </div>
     <div class="container" id="projects">
-        <!-- Projects Section -->
-        <div class="card">
-            <h2>Projects</h2>
-            <ul>
-                <li>
-                    <strong>Intrusion Detection System:</strong> 
-                    <a href="https://github.com/varaprasad1016/IntrusionDetectionSystem" class="btn" target="_blank">Source Code</a>
-                </li>
-                <li>
-                    <strong>Gamma Particle Classification:</strong>
-                    <a href="https://github.com/varaprasad1016/Classification-Of-Gamma-Particles-using-Classification-Techniques" class="btn" target="_blank">Source Code</a>
-                </li>
-                 <li>
-                    <strong>Neat Log Updater:</strong>
-                    <a href="https://github.com/varaprasad1016/neatlogupdater" class="btn" target="_blank">Source Code</a>
-                </li>
-            </ul>
-        </div>
+    <!-- Projects Section -->
+    <div class="card">
+        <h2>Projects</h2>
+        <ul>
+            <li>
+                <strong>Intrusion Detection System:</strong>
+                <a href="https://github.com/varaprasad1016/IntrusionDetectionSystem" class="btn" target="_blank">Source Code</a>
+            </li>
+            <li>
+                <strong>Gamma Particle Classification:</strong>
+                <a href="https://github.com/varaprasad1016/Classification-Of-Gamma-Particles-using-Classification-Techniques" class="btn" target="_blank">Source Code</a>
+            </li>
+            <li>
+                <strong>Neat Log Updater:</strong>
+                <a href="https://github.com/varaprasad1016/neatlogupdater" class="btn" target="_blank">Source Code</a>
+            </li>
+        </ul>
     </div>
+</div>
+
+<style>
+    .btn {
+        display: block;
+        margin-top: 8px; /* Adds spacing between buttons */
+    }
+</style>
 					</div>
 					<!-- Add a unique ID to the terminal container -->
 			<div class="container">
