--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             margin-left: 15px;
         }
         .btn {
-    display: inline-block;
+    	   display: inline-block;
     padding: 0.8rem 1.5rem;
     background: linear-gradient(90deg, #b8864b, #d2a679);
     color: #2c1a08;
@@ -187,6 +187,17 @@
         <div class="card">
             <h2>About Me</h2>
             <p>Hello! I'm Varaprasad Sukala, a passionate Data Scientist with expertise in AI, machine learning, and data analytics. I enjoy solving complex problems and turning data into actionable insights.</p>
+		<button>
+    			<a href="https://www.linkedin.com/in/varaprasadsukalathedatascientist" class="btn" target="_blank">Visit My LinkedIn</a>
+    			<div id="clip">
+       			<div id="leftTop" class="corner"></div>
+        		<div id="rightBottom" class="corner"></div>
+        		<div id="rightTop" class="corner"></div>
+        		<div id="leftBottom" class="corner"></div>
+    		</div>
+    		<span id="rightArrow" class="arrow"></span>
+    		<span id="leftArrow" class="arrow"></span>
+		</button>
             <a href="https://www.linkedin.com/in/varaprasadsukalathedatascientist" class="btn" target="_blank">Visit My LinkedIn</a>
         </div>
     </div>
